--- a/.env web
+++ b/.env web
@@ -1,7 +1,7 @@
 APP_NAME=Laravel
 APP_ENV=production
 APP_KEY=base64:faA2j1OBplU89wz/uO0FBRZzR6XsEM0o+x0hUCK2KyM=
-APP_DEBUG=false
+APP_DEBUG=true
 APP_URL=http://localhost
 
 LOG_CHANNEL=stack
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=simplenext
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=c2050240_login
+DB_USERNAME=c2050240_nx
+DB_PASSWORD=Pdjg34F55Y
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
