--- a/.env web
+++ b/.env web
@@ -1,5 +1,5 @@
 APP_NAME=Laravel
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:faA2j1OBplU89wz/uO0FBRZzR6XsEM0o+x0hUCK2KyM=
 APP_DEBUG=true
 APP_URL=http://localhost
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=c2050240_login
+DB_DATABASE=c2050240_testnx
 DB_USERNAME=c2050240_nx
 DB_PASSWORD=Pdjg34F55Y
 
@@ -44,3 +44,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_ENDPOINT=https://jsonplaceholder.typicode.com
